# PDF_unstructured

./: .gitignore  01_RAG_ingest_app.py  01_ingest_pdf.py  02_image_summarizer.py  03_output_markdown.py  04_read_chunked_json.py  README.md  config.ini.template  pyproject.toml  requirements.txt
_archive/: LangChain_PDF_loader copy.py  config.py  json_chunker.py  pdf_ingest.py  pdf_pre_processing.py  pdf_processing.py
documentation/: Unstructured Doc.txt
helpers/: __init__.py  config.py  display.py  field_settings.py  llm_summaries.py  pdf_box_plotting.py  pdf_ingest.py
utils/: create_backup.bash
